fixed issue for viewability on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,7 @@ body{
 .charcard {
     margin-top: 10px;
     border: solid 2px goldenrod;
-    width: 30% !important;
+    /* width: 30% !important; */
     height: auto;
     float: left;
     margin-left: 20px !important;
@@ -71,31 +71,6 @@ body{
     margin-bottom: 5px;
 }
 
-.title {
-    background-color: rgba(0, 128, 0, 0.658);
-    border: solid 2px black;
-    /* border-radius: 25px; */
-    border-radius: 20px 0 20px 0;
-}
-
-.content {
-    border: solid 2px black;
-    /* border-radius: 25px; */
-    background-image: url("../images/page.png");
-    border-radius: 20px 0 20px 0;
-}
-
-.divider{
-    width: 100%;
-    height: 10px;
-}
-
-.icon{
-    height: 25px;
-    width: auto;
-    border: solid 2px black;
-
-}
 .title {
     background-color: rgba(0, 128, 0, 0.658);
     border: solid 2px black;
